app-of-apps/app-helloworld-2/deployment-helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: helloworld-2
  name: hello-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
      - name: hello-openshift
        image: openshift4/ose-hello-openshift-rhel8
        ports:
        - containerPort: 8080
