app-of-apps/app-helloworld-2/service-hello-openshift.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: helloworld-2
  name: hello-openshift
  namespace: helloworld-2
spec:
  clusterIP: 172.30.237.204
  clusterIPs:
  - 172.30.237.204
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-openshiftpippo
  sessionAffinity: None
  type: ClusterIP
