app-of-apps/app-helloworld-2/route-hello-openshift.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: helloworld-2
  name: hello-openshift
  namespace: helloworld-2
spec:
  host: hello-openshift-helloworld-2.apps.lab01.gpslab.club
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-openshift
    weight: 100
  wildcardPolicy: None
